# dash-spv-chain

./: .env  .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
db/: DashSyncRS.sqlite  DashSyncRS.sqlite-shm  DashSyncRS.sqlite-wal
migrations/2022-04-18-111249_create_masternode_lists_table/: up.sql
migrations/2022-04-18-125448_create_local_masternodes_table/: up.sql
migrations/2022-06-03-165210_create_identities/: up.sql
migrations/2022-06-03-165227_create_identity_key_paths/: down.sql  up.sql
migrations/2022-06-03-165241_create_identity_usernames/: down.sql  up.sql
migrations/2022-06-03-165256_create_invitations/: up.sql
migrations/2022-06-03-165317_create_users/: up.sql
migrations/2022-06-03-165521_create_chains/: up.sql
migrations/2022-06-03-165533_create_chain_locks/: up.sql
migrations/2022-06-03-165623_create_blocks/: up.sql
migrations/2022-06-03-165630_create_sporks/: up.sql
migrations/2022-06-03-165639_create_addresses/: up.sql
migrations/2022-06-03-165646_create_contracts/: up.sql
migrations/2022-06-03-165704_create_peers/: up.sql
migrations/2022-06-03-165749_create_transaction_inputs/: up.sql
migrations/2022-06-03-165811_create_transactions/: up.sql
migrations/2022-06-03-165823_create_coinbase_transactions/: up.sql
migrations/2022-06-03-165834_credit_funding_transactions/: up.sql
migrations/2022-12-02-131958_create_checkpoints/: up.sql
migrations/2022-12-08-215641_create_llmq_snapshots/: down.sql  up.sql
src/: environment.rs  lib.rs  macros.rs  notifications.rs  schema.rs  test.rs  user_defaults.rs
src/blockdata/: opcodes.rs
src/chain/: chain.rs  chain_lock.rs  chain_sync_phase.rs  checkpoint.rs  dispatch_context.rs  merkle_tree.rs  mod.rs  params.rs
src/chain/bip/: bip32.rs  bip39_language.rs  bip39_mnemonic.rs  dip14.rs
src/chain/block/: block.rs  block_position.rs  full_block.rs  merkle_block.rs  mod.rs
src/chain/common/: block_data.rs  chain_type.rs  llmq_type.rs  llmq_version.rs  merkle_tree.rs  mod.rs  socket_address.rs
src/chain/ext/: accounts.rs  derivation.rs  identities.rs  invitations.rs  mod.rs  settings.rs  store.rs  (+3 more)
src/consensus/: encode.rs
src/crypto/: bool.rs  byte_util.rs  data_ops.rs  mod.rs  utxo.rs  var_int.rs
src/dapi/: client.rs  client_error_code.rs  mod.rs  platform_dictionary.rs  platform_query.rs
src/derivation/: authentication_keys_derivation_path.rs  credit_funding_derivation_path.rs  derivation_path.rs  derivation_path_feature_purpose.rs  derivation_path_reference.rs  derivation_path_type.rs  factory.rs  funds_derivation_path.rs  incoming_funds_derivation_path.rs  index_path.rs  masternode_holdings_derivation_path.rs  mod.rs  simple_indexed_derivation_path.rs  uint256_index_path.rs
src/ffi/: callbacks.rs  from.rs  mod.rs  to.rs  unboxer.rs
src/keychain/: keychain.rs  mod.rs
src/keys/: bls_key.rs  ecdsa_key.rs  key.rs  mod.rs
src/manager/: authentication_manager.rs  chains_manager.rs  governance_sync_manager.rs  identities_manager.rs  masternode_manager.rs  mod.rs  peer_manager.rs  peer_manager_desired_state.rs  transaction_manager.rs
src/models/: mod.rs
src/network/: mod.rs  network_context.rs
src/platform/: mod.rs  platform.rs  platform_context.rs
src/processing/: mn_listdiff_result.rs  processor.rs  processor_cache.rs  qr_info_result.rs
src/resource/: bundle.rs
src/storage/: context.rs  mod.rs
src/util/: address.rs  base58.rs  big_uint.rs  crypto.rs  data_append.rs  data_ops.rs  error.rs  mod.rs  script.rs  time.rs
(+197 files in other folders)
