[package]
name = "dash-spv-chain"
version = "0.0.1"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
byte = "0.2"
libc = "0.2.132"
libp2p = "^0.45"
bitcoin_hashes = { version = "0.11.0", default-features = false }
bitcoinconsensus = { version = "0.19.0-3", optional = true }
futures = "0.3.25"
minicbor = "0.17.1"
murmur3 = "0.5.2"
blake3 = "1.3.2"
secp256k1 = { version = "0.24.0", default-features = false }
core2 = { version = "0.4.0", optional = true, default-features = false }
bls-signatures = { git = "https://github.com/dashevo/bls-signatures", branch = "rust-bindings" }

os-timer = "1.0.10"

### Crypto
ring = "0.16.20"


### Serialization
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

### Network
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

### Storage dependencies
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono", "numeric"] }
r2d2 = "0.8.9"
chrono = "0.4.19"
dotenvy = "0.15"
###

#[dependencies.dash-spv-masternode-processor]
#git = "https://github.com/dashpay/masternode-diff-processor"
#branch = "feat/migration-from-objc"
#version = "0.3.10"
#[dependencies.dash-spv-masternode-processor]
#path = "../masternodes-diff-processor"
#[dependencies.dash-spv-storage]
#path = "../dash-spv-storage"

[dev-dependencies]
secp256k1 = { version = "0.24.0", features = [ "recovery", "rand-std" ] }

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "dash_spv_chain"
#crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = "thin"
opt-level = 3
#debug = true
