[package]
name = "dash-spv-chain"
version = "0.0.1"
edition = "2021"
build = "build.rs"
publish = false

[features]
default = ["std", "secp-recovery"]
unstable = []
rand = ["secp256k1/rand-std"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]

std = ["secp256k1/std", "bitcoin_hashes/std"]

[dependencies]
bitflags = "2.0.0-rc.1"
byte = "0.2"
libc = "0.2.132"
futures = "0.3.25"
core2 = { version = "0.4.0", optional = true, default-features = false }

os-timer = "1.0.10"

### Crypto
bip39 = { version = "1.0.1", default-features = false, features = ["chinese-simplified", "french", "italian", "japanese", "korean", "spanish", "rand"] }
bitcoin_hashes = { version = "0.11.0", default-features = false }
bitcoinconsensus = { version = "0.19.0-3", optional = true }
blake3 = "1.3.2"
bls-signatures = { git = "https://github.com/dashevo/bls-signatures", branch = "rust-bindings" }
chacha20poly1305 = "0.10.1"
murmur3 = "0.5.2"
ring = "0.16.20"
rs-x11-hash = "0.1.2"
secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
#security-framework

### Serialization
minicbor = "0.19.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

### Network
url = "2.3.1"
libp2p = "^0.45"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

### Storage dependencies
diesel = { version = "2.0.2", features = ["sqlite", "r2d2", "chrono", "numeric"] }
r2d2 = "0.8.9"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
dotenvy = "0.15"


[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "dash_spv_chain"
#crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = "thin"
opt-level = 3
#debug = true
